# cuda_emulator

./: CMakeLists.txt
src/runtime/: CMakeLists.txt  common.h  stub_cuda_runtime.cpp  stub_cuda_runtime.h
test/vadd/: log.py  vadd.cu
